tests/snapshots/file@field@set_on_class.lox.snap
---
source: tests/common/mod.rs
description: "class Foo {}\nFoo.bar = \"value\"; // expect runtime error: Only instances have fields.\n"
input_file: crafting_interpreters_test_files/field/set_on_class.lox
---
OUT: 

===
ERR: 
  × only instances have properties
   ╭─[2:5]
 1 │ class Foo {}
 2 │ Foo.bar = "value"; // expect runtime error: Only instances have fields.
   ·     ─┬─
   ·      ╰── here
   ╰────
